fixed text overflow

--- a/src/app/components/card/card.scss
+++ b/src/app/components/card/card.scss
@@ -17,6 +17,7 @@
   cursor: default;
 
   .internal-padding {
+    width: -webkit-fill-available;
     position: absolute;
 
     overflow-wrap: break-word;
