--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -1,7 +1,7 @@
 $card-height-mobile: 400px;
 $card-height-desktop: 500px;
-$card-width-mobile: 240px;
-$card-width-desktop: 300px;
+$card-width-mobile: 270px;
+$card-width-desktop: 350px;
 
 $video-height-mobile: 480px;
 $video-height-desktop: 600px;
